2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove force flag from autoreconf.
	* build-aux/bootstrap: Here.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Libtool support more robust.
	* Makefile.am: Regenerate Libtool related files if
	required.
	* configure.ac: Remove obsolete macro.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add libtool related files.
	* .gitignore: Remove committed file from ignore list.
	* build-aux/config.guess: New.
	* build-aux/config.sub: New.
	* build-aux/depcomp: New.
	* build-aux/install-sh: New.
	* build-aux/libtool.m4: New.
	* build-aux/ltmain.sh: New.
	* build-aux/ltoptions.m4: New.
	* build-aux/ltsugar.m4: New.
	* build-aux/ltversion.m4: New.
	* build-aux/lt~obsolete.m4: New.
	* build-aux/missing: New.
	* configure.ac: Check that dlopen is available.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not display user search path.
	Displaying the user search path is not needed as it is
	not used by the factory.
	* include/roboptim/core/solver-factory.hxx: Here.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make factory errors more verbose.
	* include/roboptim/core/solver-factory.hxx: Display
	libltdl errors and used arguments.

2009-05-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Make pkg-config depends from configure.
	* Makefile.am: Here.

2009-05-27  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix wrong signature in NTimesDerivableFunction.
	* include/roboptim/core/n-times-derivable-function.hh: Here.

2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix n-times-derivable-function gradient.
	* include/roboptim/core/n-times-derivable-function.hh: Here.

2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix derivative vector size.
	* include/roboptim/core/n-times-derivable-function.hh:
	Fix derivative vector size and corresponding checks.

2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Clean and check result class.